add activate user functionality
