# internal/dto/userDto.go
@@ -9,9 +9,9 @@ type UserResponseDto struct {
 }
 
 type RegisterUserDto struct {
-	FirstName string `json:"first_name" validate:"required, max=100"`
-	LastName  string `json:"last_name" validate:"required, max=100"`
-	Username  string `json:"username" validate:"required, max=100"`
+	FirstName string `json:"first_name" validate:"required,max=100"`
+	LastName  string `json:"last_name" validate:"required,max=100"`
+	Username  string `json:"username" validate:"required,max=100"`
 	Email     string `json:"email" validate:"required,email"`
 	Password  string `json:"password" validate:"required,min=6"`
 }
